Updated masthead /herog fonts, removed animations, removed hero image

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 {{ insert masthead.html }}
 
 <div class="initial-content">
-  <div class="page__hero--overlay"
-    style="background-color: #5e616c; background-image: url('/assets/minimal-mistakes/mm-home-page-feature.jpg');">
+  <div class="page__hero--overlay">
+  <!-- <div class="page__hero--overlay" style="background-color:    #5e616c; background-image: url('/assets/minimal-mistakes/mm-home-page-feature.jpg');"> -->
     <div class="wrapper">
       <h1 id="page-title" class="page__title" itemprop="headline">Minimal Mistakes</h1>
       <p class="page__lead">A flexible two-column theme <br> developed by Michael Rose.</p>
