Removed franklin from .gitignore

--- a/__site/index.html
+++ b/__site/index.html
@@ -14,7 +14,7 @@
       document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
     </script>
     <!-- For all browsers -->
-    <link rel="stylesheet" href="/minimal/css/minimal-mistakes.css">
+    <link rel="stylesheet" href="/css/minimal-mistakes.css">
     <!--[if IE ]>
       <style>
         /* old IE unsupported flexbox fixes */
@@ -38,12 +38,12 @@
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
-        <a class="site-title" href="/minimal/">Minimal Mistakes</a>
+        <a class="site-title" href="/">Minimal Mistakes</a>
         <ul class="visible-links">
-          <li class="masthead__menu-item"><a href="/minimal/franklin/" >Franklin</a></li>
-          <li class="masthead__menu-item"><a href="/minimal/menu1/" >Code blocks</a></li>
-          <li class="masthead__menu-item"><a href="/minimal/menu2/" >More Goodies</a></li>
-          <li class="masthead__menu-item"><a href="/minimal/menu3/">Tags</a></li>
+          <li class="masthead__menu-item"><a href="/franklin/" >Franklin</a></li>
+          <li class="masthead__menu-item"><a href="/menu1/" >Code blocks</a></li>
+          <li class="masthead__menu-item"><a href="/menu2/" >More Goodies</a></li>
+          <li class="masthead__menu-item"><a href="/menu3/">Tags</a></li>
         </ul>
         <button class="greedy-nav__toggle hidden" type="button">
           <span class="visually-hidden">Toggle menu</span>
@@ -73,42 +73,42 @@
           <div class="feature__item">
             <div class="archive__item">
               <div class="archive__item-teaser">
-                <img src="/minimal/assets/minimal-mistakes/mm-customizable-feature.png" alt="customizable" />
+                <img src="/assets/minimal-mistakes/mm-customizable-feature.png" alt="customizable" />
               </div>
               <div class="archive__item-body">
-                <h2 class="archive__item-title">Franklin</h2>
+                <h3 class="archive__item-title">Franklin</h3>
                 <div class="archive__item-excerpt">
                   <p>Minimal mistakes works with Franklin too!</p>
                 </div>
-                <p><a href="/minimal/minimal-mistakes/docs/configuration/" class="btn btn--primary">Learn more</a></p>
+                <p><a href="/minimal-mistakes/docs/configuration/" class="btn btn--primary">Learn more</a></p>
               </div>
             </div>
           </div>
           <div class="feature__item">
             <div class="archive__item">
               <div class="archive__item-teaser">
-                <img src="/minimal/assets/minimal-mistakes/mm-responsive-feature.png" alt="fully responsive" />
+                <img src="/assets/minimal-mistakes/mm-responsive-feature.png" alt="fully responsive" />
               </div>
               <div class="archive__item-body">
-                <h2 class="archive__item-title">Responsive</h2>
+                <h3 class="archive__item-title">Responsive</h3>
                 <div class="archive__item-excerpt">
                   <p>Built with HTML5 + CSS3. All layouts are fully responsive with helpers to augment your content.</p>
                 </div>
-                <p><a href="/minimal/minimal-mistakes/docs/layouts/" class="btn btn--primary">Learn more</a></p>
+                <p><a href="/minimal-mistakes/docs/layouts/" class="btn btn--primary">Learn more</a></p>
               </div>
             </div>
           </div>
           <div class="feature__item">
             <div class="archive__item">
               <div class="archive__item-teaser">
-                <img src="/minimal/assets/minimal-mistakes/mm-free-feature.png" alt="100% free" />
+                <img src="/assets/minimal-mistakes/mm-free-feature.png" alt="100% free" />
               </div>
               <div class="archive__item-body">
-                <h2 class="archive__item-title">100% free</h2>
+                <h3 class="archive__item-title">100% free</h3>
                 <div class="archive__item-excerpt">
                   <p>Free to use however you want under the MIT License. Clone it, fork it, customize it… whatever!</p>
                 </div>
-                <p><a href="/minimal/minimal-mistakes/docs/license/" class="btn btn--primary">Learn more</a></p>
+                <p><a href="/minimal-mistakes/docs/license/" class="btn btn--primary">Learn more</a></p>
               </div>
             </div>
           </div>
@@ -136,7 +136,7 @@
       </footer>
     </div>
 
-    <script src="/minimal/libs/minimal-mistakes/main.min.js"></script>
+    <script src="/libs/minimal-mistakes/main.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
 
     
