--- a/__site/404.html
+++ b/__site/404.html
@@ -11,10 +11,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
-  <link rel="stylesheet" href="/minimal/css/franklin.css">
-<link rel="stylesheet" href="/minimal/css/minimal-mistakes.css">
-<link rel="stylesheet" href="/minimal/css/adjust.css">
-<link rel="icon" href="/minimal/assets/favicon.png">
+  <link rel="stylesheet" href="/css/franklin.css">
+<link rel="stylesheet" href="/css/minimal-mistakes.css">
+<link rel="stylesheet" href="/css/adjust.css">
+<link rel="icon" href="/assets/favicon.png">
 <!--[if IE ]>
 <style>
   /* old IE unsupported flexbox fixes */
@@ -38,12 +38,12 @@
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
-        <a class="site-title" href="/minimal/">Minimal Mistakes</a>
+        <a class="site-title" href="/">Minimal Mistakes</a>
         <ul class="visible-links">
-          <li class="masthead__menu-item"><a href="/minimal/franklin/" >Franklin</a></li>
-          <li class="masthead__menu-item"><a href="/minimal/menu1/" >Code blocks</a></li>
-          <li class="masthead__menu-item"><a href="/minimal/menu2/" >More Goodies</a></li>
-          <li class="masthead__menu-item"><a href="/minimal/menu3/">Tags</a></li>
+          <li class="masthead__menu-item"><a href="/franklin/" >Franklin</a></li>
+          <li class="masthead__menu-item"><a href="/menu1/" >Code blocks</a></li>
+          <li class="masthead__menu-item"><a href="/menu2/" >More Goodies</a></li>
+          <li class="masthead__menu-item"><a href="/menu3/">Tags</a></li>
         </ul>
         <button class="greedy-nav__toggle hidden" type="button">
           <span class="visually-hidden">Toggle menu</span>
@@ -60,7 +60,7 @@
       <div class="sidebar sticky">
         <div itemscope itemtype="https://schema.org/Person">
           <div class="author__avatar">
-            <img src="/minimal/assets/minimal-mistakes/zenobia.png" alt="Septimia Zenobia" itemprop="image">
+            <img src="/assets/minimal-mistakes/zenobia.png" alt="Septimia Zenobia" itemprop="image">
           </div>
           <div class="author__content">
             <h3 class="author__name" itemprop="name">Yenson Lau</h3>
@@ -82,7 +82,7 @@
 <!-- Content appended here -->
 <div class="franklin-content"><h1 id="404_file_not_found"><a href="#404_file_not_found" class="header-anchor">404: File not found</a></h1>
 <p>The requested file was not found.</p>
-<p>Please <a href="/minimal/">click here</a> to go to the home page.</p>
+<p>Please <a href="/">click here</a> to go to the home page.</p>
 <div class="page-foot">
   <div class="copyright">
     &copy; Yenson Lau. Last modified: May 08, 2021. Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
@@ -108,7 +108,7 @@
       </footer>
     </div>
 
-    <script src="/minimal/libs/minimal-mistakes/main.min.js"></script>
+    <script src="/libs/minimal-mistakes/main.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.8.2/js/all.js" integrity="sha384-DJ25uNYET2XCl5ZF++U8eNxPWqcKohUUBUpKGlNLMchM7q4Wjg2CUpjHLaL8yYPH" crossorigin="anonymous"></script>
 
     
